results/SVCOMP/4-shot/log-ExSymExe21-2024_03_18_19_19_15.txt
class Main {
  static int field;
  static int field2;

  //@ ensures \result ==> x == 3;
  //@ ensures field == 9;
  //@ ensures \result <==> test(x, field, field2);
  public static boolean f() {
    int x = 3; /* we want to specify in an annotation that this param should be
                  symbolic */

    Main inst = new Main();
    field = 9;
    return inst.test(x, field, field2);
  }

  //@ requires x == 3;
  //@ ensures r == x + z;
  //@ ensures z == x - 3 - 4;
  //@ ensures \result ==> r >= 99;
  //@ ensures \result <==> x >= z;
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe21");
    int y = 3;
    r = x + z;
    z = x - y - 4;
    if (r >= 99) System.out.println("branch FOO1");
    else System.out.println("branch FOO2");
    if (x >= z) System.out.println("branch BOO1");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:5: error: cannot find symbol
  //@ ensures \result ==> x == 3;
                          ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:6: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures field == 9;
              ^
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: cannot find symbol
  //@ ensures \result <==> test(x, field, field2);
                                ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> test(x, field, field2);
                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExe21.java:7: error: An identifier with package visibility may not be used in a ensures clause with public visibility
  //@ ensures \result <==> test(x, field, field2);
                                          ^
5 errors

